[package]
name = "actix-gcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
serde = {version = "1.0", features = ["derive"]}
# rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
# time = "0.2.11"
